# cmake_c_app

./: CMakeLists.txt  README.md
source/: main.c
